[UPD] Add Header

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="text-center mt-5">
+                        <h1>Bootstrap 5 Responsive Grid</h1>
+                        <p class="text-secondary">Layout giglia con diversi breackpoint (sm, md lg)</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main></main>
 </body>
 </html>
