[UPD] Add part1 del main

--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+        <div class="container-fluid">
+            <div class="row my-3">
+                <div class="col-12">
+                    <div class="content bg-light">
+                        <h2>Colonna1</h2>
+                        <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="content bg-secondary">
+                        <h2>Colonna2</h2>
+                        <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
