[UPD] Add part2 del main

--- a/index.html
+++ b/index.html
@@ -22,18 +22,43 @@
     </header>
 
     <main>
+
+        <!-- parte1 -->
         <div class="container-fluid">
-            <div class="row my-3">
-                <div class="col-12">
-                    <div class="content bg-light">
+            <div class="row my-3 mx-5">
+                <div class="col-12 bg-light">
+                    <div class="content">
                         <h2>Colonna1</h2>
+                        <p class="text-secondary">Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
+                    </div>
+                </div>
+                <div class="col-12 bg-secondary">
+                    <div class="content text-white">
+                        <h2>Colonna2</h2>
                         <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
                     </div>
                 </div>
-                <div class="col-12">
-                    <div class="content bg-secondary">
-                        <h2>Colonna2</h2>
-                        <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
+            </div>
+        </div>
+
+        <div class="container-fluid">
+            <div class="row my-3 mx-5">
+                <div class="col-6 bg-primary">
+                    <div class="content text-white">
+                        <h2>Colonna1</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
+                    </div>
+                </div>
+                <div class="col-6 bg-success">
+                    <div class="content text-white">
+                        <h2>Colonna 2</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
+                    </div>
+                </div>
+                <div class="col-12 bg-danger">
+                    <div class="content text-white">
+                        <h2>Colonna 3</h2>
+                        <p>Larghezza intera su dispositivi piccoli (col-12) e un terzo su dispositivi medi e più grandi.</p>
                     </div>
                 </div>
             </div>
