[UPD] Add part3 main

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <!-- parte1 -->
         <div class="container-fluid">
-            <div class="row my-3 mx-5">
+            <div class="row m-4">
                 <div class="col-12 bg-light">
                     <div class="content">
                         <h2>Colonna1</h2>
@@ -42,7 +42,7 @@
         </div>
 
         <div class="container-fluid">
-            <div class="row my-3 mx-5">
+            <div class="row m-4">
                 <div class="col-6 bg-primary">
                     <div class="content text-white">
                         <h2>Colonna1</h2>
@@ -63,6 +63,37 @@
                 </div>
             </div>
         </div>
+
+        <div class="container-fluid">
+            <div class="row m-4">
+                <div class="col-6 bg-info">
+                    <div class="content text-white">
+                        <h2>Colonna1</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p>
+                    </div>
+                </div>
+                <div class="col-6 bg-warning">
+                    <div class="content text-white">
+                        <h2>Colonna 2</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p>
+                    </div>
+                </div>
+                <div class="col-6 bg-dark">
+                    <div class="content text-white">
+                        <h2>Colonna 3</h2>
+                        <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p>
+                    </div>
+                </div>
+                <div class="col-6 bg-body-tertiary">
+                    <div class="content">
+                        <h2>Colonna 4</h2>
+                        <p class="text-secondary">Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </main>
 </body>
 </html>
