--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div class="col-12">
                     <div class="text-center mt-5">
                         <h1>Bootstrap 5 Responsive Grid</h1>
-                        <p class="text-secondary">Layout giglia con diversi breackpoint (sm, md lg)</p>
+                        <p class="text-secondary fs-4">Layout giglia con diversi breackpoint (sm, md lg)</p>
                     </div>
                 </div>
             </div>
@@ -26,15 +26,15 @@
         <!-- parte1 -->
         <div class="container-fluid">
             <div class="row m-4">
-                <div class="col-12 bg-light">
+                <div class="col-12 col-md-6 bg-light">
                     <div class="content">
-                        <h2>Colonna1</h2>
+                        <h2>Colonna 1</h2>
                         <p class="text-secondary">Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
                     </div>
                 </div>
-                <div class="col-12 bg-secondary">
+                <div class="col-12 col-md-6 bg-secondary">
                     <div class="content text-white">
-                        <h2>Colonna2</h2>
+                        <h2>Colonna 2</h2>
                         <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
                     </div>
                 </div>
@@ -43,19 +43,19 @@
 
         <div class="container-fluid">
             <div class="row m-4">
-                <div class="col-6 bg-primary">
+                <div class="col-6 col-md-4 bg-primary">
                     <div class="content text-white">
-                        <h2>Colonna1</h2>
+                        <h2>Colonna 1</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
                 </div>
-                <div class="col-6 bg-success">
+                <div class="col-6 col-md-4 bg-success">
                     <div class="content text-white">
                         <h2>Colonna 2</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
                 </div>
-                <div class="col-12 bg-danger">
+                <div class="col-12 col-md-4 bg-danger">
                     <div class="content text-white">
                         <h2>Colonna 3</h2>
                         <p>Larghezza intera su dispositivi piccoli (col-12) e un terzo su dispositivi medi e più grandi.</p>
@@ -66,25 +66,25 @@
 
         <div class="container-fluid">
             <div class="row m-4">
-                <div class="col-6 bg-info">
+                <div class="col-6 col-md-3 bg-info">
                     <div class="content text-white">
-                        <h2>Colonna1</h2>
+                        <h2>Colonna 1</h2>
                         <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p>
                     </div>
                 </div>
-                <div class="col-6 bg-warning">
+                <div class="col-6 col-md-3 bg-warning">
                     <div class="content text-white">
                         <h2>Colonna 2</h2>
                         <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p>
                     </div>
                 </div>
-                <div class="col-6 bg-dark">
+                <div class="col-6 col-md-3 bg-dark">
                     <div class="content text-white">
                         <h2>Colonna 3</h2>
                         <p>Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p>
                     </div>
                 </div>
-                <div class="col-6 bg-body-tertiary">
+                <div class="col-6 col-md-3 bg-body-tertiary">
                     <div class="content">
                         <h2>Colonna 4</h2>
                         <p class="text-secondary">Metà larghezza su dispositivi piccoli e un quarto su dispositivi medi e più grandi.</p>
