[UPD] Add lg responsive

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <!-- parte1 -->
         <div class="container-fluid">
             <div class="row m-4">
-                <div class="col-12 col-md-6 bg-light">
+                <div class="col-12 col-md-6 col-lg-4 bg-light">
                     <div class="content">
                         <h2>Colonna 1</h2>
                         <p class="text-secondary">Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 bg-secondary">
+                <div class="col-12 col-md-6 col-lg-8 bg-secondary">
                     <div class="content text-white">
                         <h2>Colonna 2</h2>
                         <p>Larghezza intera su dispositivi piccoli, metà larghezza su dispositivi medi e un terzo su dispositivi grandi .</p>
@@ -43,19 +43,19 @@
 
         <div class="container-fluid">
             <div class="row m-4">
-                <div class="col-6 col-md-4 bg-primary">
+                <div class="col-6 col-md-4 col-lg-4 bg-primary">
                     <div class="content text-white">
                         <h2>Colonna 1</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
                 </div>
-                <div class="col-6 col-md-4 bg-success">
+                <div class="col-6 col-md-4 col-lg-4 bg-success">
                     <div class="content text-white">
                         <h2>Colonna 2</h2>
                         <p>Metà larghezza su dispositivi piccoli e un terzo su dispositivi medi e più grandi.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4 bg-danger">
+                <div class="col-12 col-md-4 col-lg-4 bg-danger">
                     <div class="content text-white">
                         <h2>Colonna 3</h2>
                         <p>Larghezza intera su dispositivi piccoli (col-12) e un terzo su dispositivi medi e più grandi.</p>
